--- a/appspec.yml
+++ b/appspec.yml
@@ -35,3 +35,7 @@ hooks:
   - location: scripts/stop_server
     timeout: 300
     runas: root
+  AfterAllowTraffic:
+  - localtion: scripts/remove_html
+    timeout: 100
+    runas: root
